Add type information to OMDB query to make results more accurate.